Updated mongodb IP and fixed dark mode CSS

--- a/web/static/css/styles.css
+++ b/web/static/css/styles.css
@@ -127,4 +127,7 @@ textarea:focus, input:focus{
 	.gradient_row {
 		box-shadow: none;
 	}
+	.number_row_text {
+		color: white;
+	}
 }
